# cmake-pytorch-example

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  pyproject.toml
cmake/modules/: PyTorch.cmake
examples/: main.cpp
include/: lltm.h  torch.h
src/: lltm.cpp
src/binding/: bind.cpp
src/lltm/: __init__.py
